Slightly increase the base font size for all text

--- a/src/_shared/layout.twig
+++ b/src/_shared/layout.twig
@@ -8,8 +8,9 @@
     <title>{{ application_name }}{% if page_title %} | {{ page_title }}{% endif %}</title>
     <meta name="description" content="{{ application_description }}">
 
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Oswald:300,400" as="style">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="/src/_assets/favicon.png" rel="shortcut icon">
     <meta name="turbo-cache-control" content="no-cache">
     <meta name="turbo-prefetch" content="false">
