Fix misspelling in OG url metatag; update npm packages

--- a/src/_shared/layout.twig
+++ b/src/_shared/layout.twig
@@ -18,7 +18,7 @@
     <meta name="turbo-refresh-scroll" content="preserve">
 
     <meta property="og:title" content="{{application_name}}{% if page_title %} | {{ page_title }}{% endif %}">
-    <meta property="og:url" content="https://michael.sigurs1.io/{{page_url}}">
+    <meta property="og:url" content="https://michael.sigusr1.io/{{page_url}}">
     <meta property="og:type" content="website">
     <meta property="og:description" content="{{application_description}}">
     <meta property="og:locale" content="en_US">
